opam-version: "2.0"
name: "cuekeeper"
synopsis: "Web-based GTD system with Git-based history"
maintainer: "Thomas Leonard <talex5@gmail.com>"
authors: "Thomas Leonard <talex5@gmail.com>"
license: "GNU LESSER GENERAL PUBLIC LICENSE, v2.1"
homepage: "https://github.com/talex5/cuekeeper"
bug-reports: "https://github.com/talex5/cuekeeper/issues"
depends: [
  "ocaml"
  "sexplib" {>= "v0.13.0"}
  "uuidm"
  "irmin"
  "tyxml" {>= "4.3.0"}
  "reactiveData"
  "js_of_ocaml" {>= "3.0.0"}
  "js_of_ocaml-tyxml"
  "omd"
  "fmt"
  "logs"
  "irmin-mem" {with-test}
  "ounit" {with-test}
  "tar"
  "cohttp"
  "cohttp-lwt-jsoo"
  "irmin-indexeddb" {>= "1.3"}
  "crunch" {build}
  "ppx_sexp_conv"
  "lwt"
  "cstruct" {>= "4.0.0"}
  "ppx_deriving"
  "dune" {>= "1.11.0"}
]
build: [
  [make "client"]
  [make "test"] {with-test}
  [make "slow_test"] {with-test}
]
dev-repo: "git+https://github.com/talex5/cuekeeper.git"
description: """
CueKeeper is a web-based GTD system (a fancy TODO list) that runs entirely in
your browser (the data is stored on your computer, in your browser). It uses
Irmin to keep a full history of all updates.
"""
