opam-version: "2.0"
name: "cuekeeper"
synopsis: "Web-based GTD system with Git-based history"
maintainer: "Thomas Leonard <talex5@gmail.com>"
authors: "Thomas Leonard <talex5@gmail.com>"
license: "GNU LESSER GENERAL PUBLIC LICENSE, v2.1"
homepage: "https://github.com/talex5/cuekeeper"
bug-reports: "https://github.com/talex5/cuekeeper/issues"
depends: [
  "ocaml" {>= "4.08" & < "4.11"}
  "sexplib" {>= "v0.13.0"}
  "uuidm"
  "irmin" {>= "2.2.0"}
  "irmin-git"
  "git" {>= "2.1.3"}
  "tyxml" {>= "4.6.0"}
  "reactiveData" {>= "0.2"}
  "js_of_ocaml" {>= "4.0.0"}
  "js_of_ocaml-tyxml"
  "omd" {>= "1.2.4" & < "2.0.0~"}
  "fmt" {>= "0.8.9"}
  "logs"
  "irmin-mem" {with-test}
  "ounit" {with-test}
  "tar" {>= "2.0.0" & < "3.0.0"}
  "cohttp" {>= "2.5.0" & < "3.0.0"}
  "cohttp-lwt-unix" {< "3.0.0"}
  "cohttp-lwt-jsoo"
  "irmin-indexeddb" {>= "2.0"}
  "crunch" {build}
  "ppx_sexp_conv"
  "lwt"
  "tls" {>= "0.15.0" & < "1.0.0"}
  "cstruct" {>= "4.0.0"}
  "ppx_deriving"
  "dune" {>= "1.11.0"}
]
pin-depends: [
  ["irmin-git.2.2.0" "git+https://github.com/talex5/irmin.git#df383cc0fd81be346e1c8ee683615d394817001b"]
]
build: [
  [make "client"]
  [make "test"] {with-test}
  [make "slow_test"] {with-test}
]
dev-repo: "git+https://github.com/talex5/cuekeeper.git"
description: """
CueKeeper is a web-based GTD system (a fancy TODO list) that runs entirely in
your browser (the data is stored on your computer, in your browser). It uses
Irmin to keep a full history of all updates.
"""
