opam-version: "2.0"
name: "cuekeeper"
synopsis: "Web-based GTD system with Git-based history"
maintainer: "Thomas Leonard <talex5@gmail.com>"
authors: "Thomas Leonard <talex5@gmail.com>"
license: "GNU LESSER GENERAL PUBLIC LICENSE, v2.1"
homepage: "https://github.com/talex5/cuekeeper"
bug-reports: "https://github.com/talex5/cuekeeper/issues"
depends: [
  "ocaml" {>= "4.13"}
  "sexplib" {>= "v0.13.0"}
  "uuidm" {>= "0.9.7"}
  "irmin" {>= "2.10.0"}
  "irmin-git"
  "git" {>= "2.1.3"}
  "tyxml" {>= "4.6.0"}
  "reactiveData" {>= "0.2"}
  "js_of_ocaml" {>= "4.0.0" < "4.1.0"}
  "js_of_ocaml-tyxml"
  "omd" {>= "1.2.4" & < "2.0.0~"}
  "fmt" {>= "0.8.9"}
  "logs"
  "ounit" {with-test}
  "tar" {>= "2.0.0" & < "3.0.0"}
  "cohttp" {>= "4.0.0" & < "6.0.0"}
  "cohttp-lwt-unix"
  "cohttp-lwt-jsoo"
  "irmin-indexeddb" {>= "2.6"}
  "crunch" {build}
  "ppx_sexp_conv"
  "lwt"
  "tls-lwt" {>= "1.0.0"}
  "cstruct" {>= "4.0.0"}
  "ppx_deriving"
  "cmdliner" {>= "1.3.0"}
  "dune" {>= "3.2.0"}
]
pin-depends: [
  ["irmin-indexeddb.2.6.0" "git+https://github.com/talex5/irmin-indexeddb.git#b92cc751bc70d04c0447fab8cac259f36b2fd769"]
]
build: [
  [make "client"]
  [make "test"] {with-test}
  [make "slow_test"] {with-test}
]
dev-repo: "git+https://github.com/talex5/cuekeeper.git"
description: """
CueKeeper is a web-based GTD system (a fancy TODO list) that runs entirely in
your browser (the data is stored on your computer, in your browser). It uses
Irmin to keep a full history of all updates.
"""
